--- a/src/WebApp/Views/Account/Login.cshtml
+++ b/src/WebApp/Views/Account/Login.cshtml
@@ -1,13 +1,13 @@
-﻿@model WebApp.Models.RegisterViewModel;
+﻿@model WebApp.Models.LoginViewModel;
 @{
-	ViewData["Title"] = "Register";
+	ViewData["Title"] = "Login";
 }
 
 <div class="container mx-auto">
 	<div class="row justify-content-center">
 		<div class="col-12 col-lg-6">
 			<h1 class="mt-3 mb-3 h3">
-				Register
+				Login
 			</h1>
 			<form method="post">
 				<div class="mb-3">
@@ -16,23 +16,15 @@
 				</div>
 
 				<div class="mb-3">
-					<label class="form-label">Email</label>
-					<input type="email" id="email" class="form-control" asp-for="Email" />
-				</div>
-
-				<div class="mb-3">
 					<label class="form-label">Password</label>
 					<input type="password" id="password" class="form-control" asp-for="Password" />
 				</div>
 
 				<div class="mb-3">
-					<label class="form-label">Repeat Password</label>
-					<input type="password" id="repassword" class="form-control" asp-for="RePassword" />
+					<button type="submit" class="btn btn-dark">Login</button>
 				</div>
 
-				<div class="mb-3">
-					<button type="submit" class="btn btn-dark">Register</button>
-				</div>
+				<input type="hidden" asp-for="ReturnUrl" />
 			</form>
 		</div>
 	</div>
