styling index button

--- a/src/WebApp/Views/Account/Index.cshtml
+++ b/src/WebApp/Views/Account/Index.cshtml
@@ -10,12 +10,12 @@
 			</h1>
 
 			<div class="mb-3">
-				<button class="btn" >
+				<button class="btn btn-dark" >
 					<a asp-area="" asp-controller="Account" asp-action="Login">Login</a>
 				</button>
 			</div>
 			<div class="mb-3">
-				<button class="btn">
+				<button class="btn btn-dark">
 					<a asp-area="" asp-controller="Account" asp-action="Register">Register</a>
 				</button>
 			</div>
