removing domain reference from api

--- a/src/WebApp/Views/Account/Index.cshtml
+++ b/src/WebApp/Views/Account/Index.cshtml
@@ -10,14 +10,10 @@
 			</h1>
 
 			<div class="mb-3">
-				<button class="btn btn-dark" >
-					<a asp-area="" asp-controller="Account" asp-action="Login">Login</a>
-				</button>
+				<a class="btn btn-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
 			</div>
 			<div class="mb-3">
-				<button class="btn btn-dark">
-					<a asp-area="" asp-controller="Account" asp-action="Register">Register</a>
-				</button>
+				<a class="btn btn-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
 			</div>
 		</div>
 	</div>
