created topics on kafka and consuming images

--- a/src/WebApp/Views/Image/Sender.cshtml
+++ b/src/WebApp/Views/Image/Sender.cshtml
@@ -18,22 +18,22 @@
                     <label class="form-label">Topics</label>
                     <div>
                         <label class="form-check-label">
-                            <input type="checkbox" class="form-check-input catCheckbox" name="topics" value="cat mobile"> Cat Mobile
+                            <input type="checkbox" class="form-check-input catCheckbox" name="topics" value="cat_mobile"> Cat Mobile
                         </label>
                     </div>
                     <div class="mb-2">
                         <label class="form-check-label">
-                            <input type="checkbox" class="form-check-input catCheckbox" name="topics" value="cat email"> Cat Email
+                            <input type="checkbox" class="form-check-input catCheckbox" name="topics" value="cat_email"> Cat Email
                         </label>
                     </div>
                     <div>
                         <label class="form-check-label">
-                            <input type="checkbox" class="form-check-input dogCheckbox" name="topics" value="dog mobile"> Dog Mobile
+                            <input type="checkbox" class="form-check-input dogCheckbox" name="topics" value="dog_mobile"> Dog Mobile
                         </label>
                     </div>
                     <div>
                         <label class="form-check-label">
-                            <input type="checkbox" class="form-check-input dogCheckbox" name="topics" value="dog email"> Dog Email
+                            <input type="checkbox" class="form-check-input dogCheckbox" name="topics" value="dog_email"> Dog Email
                         </label>
                     </div>
 				</div>
