added image collection

--- a/src/WebApp/Views/Image/Index.cshtml
+++ b/src/WebApp/Views/Image/Index.cshtml
@@ -15,6 +15,9 @@
 			<div class="mb-3">
 				<a class="btn btn-dark" asp-area="" asp-controller="Image" asp-action="Receiver">Receive Images</a>
 			</div>
+			<div class="mb-3">
+				<a class="btn btn-dark" asp-area="" asp-controller="Image" asp-action="ImageCollection">Image Collection</a>
+			</div>
 		</div>
 	</div>
 </div>
