--- a/src/WebApp/Views/Image/Sender.cshtml
+++ b/src/WebApp/Views/Image/Sender.cshtml
@@ -39,7 +39,7 @@
 				</div>
 
 				<div class="mb-3">
-					<button type="submit" class="btn btn-dark">Register</button>
+					<button type="submit" class="btn btn-dark">Send</button>
 				</div>
 			</form>
 		</div>
